2005-08-26  Nathaniel Smith  <njs@pobox.com>

	* paths.cc (test_split_join): Test that you cannot create a path
	in MT by joining.
	(file_path): Implement it.
	(split): Break, to match broken behavior of old splitter (easier
	than fixing change_set.cc...)
	(file_path_internal): Test for brokenness accordingly.

2005-08-26  Nathaniel Smith  <njs@pobox.com>

	* commands.cc (cat): Hack so that 'cat file REV PATH' works
	correctly both inside and outside of working copy, interpreting
	path slightly differently in each case.
	
2005-08-26  Nathaniel Smith  <njs@pobox.com>

	* tests/t_normalized_filenames.at: Internal unnormalized pathnames
	are no longer silently normalized, but rather a hard error.
	Adjust test accordingly.

2005-08-26  Nathaniel Smith  <njs@pobox.com>

	* paths.hh (file_path_internal_from_user): New constructor.
	* paths.cc (test_file_path_internal): Test it.
	(file_path::file_path): Implement it.
	* commands.cc (cat): Use it to create/validate passed in
	filenames.

2005-08-26  Nathaniel Smith  <njs@pobox.com>

	* paths.cc (test_system_path): Require that system_path normalize
	out ..'s.
	(system_path): Do so.

2005-08-26  Nathaniel Smith  <njs@pobox.com>

	* work.cc (build_additions): Remove redundant (and now wrong)
	code.
	Test 53 now passes.
	
2005-08-26  Nathaniel Smith  <njs@pobox.com>

	* file_io.cc (make_dir_for): Oops, this doesn't need a
	fs::native.
	Test 37 now passes.

2005-08-26  Nathaniel Smith  <njs@pobox.com>

	* file_io.cc (mkdir): New function.  Now with extra brain-eating
	power.
	(mkdir_p, make_dir_for, delete_file, delete_dir_recursive) 
	(move_file, move_dir, write_data_impl): Use it, to make all
	fs::path's native and disable boost's random rejection of paths.

2005-08-26  Nathaniel Smith  <njs@pobox.com>

	* paths.cc (test_file_path_external_prefix_a_b) 
	(test_file_path_external_no_prefix, test_file_path_internal): Test
	for validity of more strange characters (,+@*%#$=).

2005-08-26  Nathaniel Smith  <njs@pobox.com>
